Fix Anotation Swagger method create
